cmake_minimum_required(VERSION 3.16.3)

project(
   EcuSw.out
   VERSION 0.1
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

add_definitions(
   -g
   -std=c++2a
   -Wall
   -Werror
   -Wextra
   -pedantic
   -Wuninitialized
)

add_executable(
   EcuSw.out
   BswAUTOSAR_Cfg_Gen/LATEST/Adc_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/BswM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/CanIf_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Can_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/ComM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Com_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/CryIf_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Cry_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Csm_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Dcm_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Dem_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Det_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Dio_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Ea_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/EcuM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Eep_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/EthIf_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Eth_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Fee_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/FiM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Fls_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/FrIf_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Fr_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Gpt_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Icu_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/LinIf_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/LinTp_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Lin_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Mcu_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/MemIf_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Nm_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/NvM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Ocu_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Os_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PduR_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Port_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Pwm_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/SchM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/SecOC_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/SokFm_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Spi_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/StbM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Vkms_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/WdgIf_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/WdgM_PBcfg.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/Wdg_PBcfg.cpp
   BswAUTOSAR_EcuAb_CanIf/LATEST/CanIf.cpp
   BswAUTOSAR_EcuAb_CryIf/LATEST/CryIf.cpp
   BswAUTOSAR_EcuAb_Ea/LATEST/Ea.cpp
   BswAUTOSAR_EcuAb_EthIf/LATEST/EthIf.cpp
   BswAUTOSAR_EcuAb_Fee/LATEST/Fee.cpp
   BswAUTOSAR_EcuAb_FrIf/LATEST/FrIf.cpp
   BswAUTOSAR_EcuAb_LinIf/LATEST/LinIf.cpp
   BswAUTOSAR_EcuAb_LinTp/LATEST/LinTp.cpp
   BswAUTOSAR_EcuAb_MemIf/LATEST/MemIf.cpp
   BswAUTOSAR_EcuAb_WdgIf/LATEST/WdgIf.cpp
   BswAUTOSAR_McAL_Adc/LATEST/Adc.cpp
   BswAUTOSAR_McAL_Can/LATEST/Can.cpp
   BswAUTOSAR_McAL_Cry/LATEST/Cry.cpp
   BswAUTOSAR_McAL_Dio/LATEST/Dio.cpp
   BswAUTOSAR_McAL_Eep/LATEST/Eep.cpp
   BswAUTOSAR_McAL_Eth/LATEST/Eth.cpp
   BswAUTOSAR_McAL_Fls/LATEST/Fls.cpp
   BswAUTOSAR_McAL_Fr/LATEST/Fr.cpp
   BswAUTOSAR_McAL_Gpt/LATEST/Gpt.cpp
   BswAUTOSAR_McAL_Icu/LATEST/Icu.cpp
   BswAUTOSAR_McAL_Lin/LATEST/Lin.cpp
   BswAUTOSAR_McAL_Mcu/LATEST/Mcu.cpp
   BswAUTOSAR_McAL_Ocu/LATEST/Ocu.cpp
   BswAUTOSAR_McAL_Port/LATEST/Port.cpp
   BswAUTOSAR_McAL_Pwm/LATEST/Pwm.cpp
   BswAUTOSAR_McAL_Spi/LATEST/Spi.cpp
   BswAUTOSAR_McAL_Wdg/LATEST/Wdg.cpp
   BswAUTOSAR_Service_BswM/LATEST/BswM.cpp
   BswAUTOSAR_Service_Com/LATEST/Com.cpp
   BswAUTOSAR_Service_ComM/LATEST/ComM.cpp
   BswAUTOSAR_Service_Csm/LATEST/Csm.cpp
   BswAUTOSAR_Service_Dcm/LATEST/Dcm.cpp
   BswAUTOSAR_Service_Dem/LATEST/Dem.cpp
   BswAUTOSAR_Service_Det/LATEST/Det.cpp
   BswAUTOSAR_Service_EcuM/LATEST/EcuM.cpp
   BswAUTOSAR_Service_FiM/LATEST/FiM.cpp
   BswAUTOSAR_Service_Nm/LATEST/Nm.cpp
   BswAUTOSAR_Service_NvM/LATEST/NvM.cpp
   BswAUTOSAR_Service_Os/LATEST/Os.cpp
   BswAUTOSAR_Service_PduR/LATEST/PduR.cpp
   BswAUTOSAR_Service_SchM/LATEST/SchM.cpp
   BswAUTOSAR_Service_SecOC/LATEST/SecOC.cpp
   BswAUTOSAR_Service_SokFm/LATEST/SokFm.cpp
   BswAUTOSAR_Service_StartUp/LATEST/StartUp.cpp
   BswAUTOSAR_Service_StbM/LATEST/StbM.cpp
   BswAUTOSAR_Service_Vkms/LATEST/Vkms.cpp
   BswAUTOSAR_Service_WdgM/LATEST/WdgM.cpp
   Rte/LATEST/Rte.cpp
   SwcServiceEcuM/LATEST/SwcServiceEcuM.cpp
   SwcServiceOs/LATEST/SwcServiceOs.cpp
   SwcApplFoc/LATEST/SwcApplFoc.cpp
)

target_include_directories(
   EcuSw.out PUBLIC
   "${PROJECT_SOURCE_DIR}/common/LATEST"
   "${PROJECT_SOURCE_DIR}/Compiler_Abstraction_GNU/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Cfg_Gen/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_CanIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_CryIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_Ea/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_EthIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_Fee/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_FrIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_LinIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_LinTp/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_MemIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_WdgIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Adc/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Can/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Cry/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Dio/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Eep/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Eth/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Fls/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Fr/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Gpt/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Icu/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Lin/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Mcu/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Ocu/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Port/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Pwm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Spi/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Wdg/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_BswM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Com/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_ComM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Csm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Dcm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Dem/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Det/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_EcuM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_FiM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Nm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_NvM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Os/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_PduR/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_SchM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_SecOC/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_SokFm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_StartUp/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_StbM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Vkms/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_WdgM/LATEST"
   "${PROJECT_SOURCE_DIR}/Rte/LATEST"
   "${PROJECT_SOURCE_DIR}/SwcServiceEcuM/LATEST"
   "${PROJECT_SOURCE_DIR}/SwcServiceOs/LATEST"
   "${PROJECT_SOURCE_DIR}/SwcApplFoc/LATEST"
)

