cmake_minimum_required(VERSION 3.16.3)

project(
   EcuSw.out
   VERSION 0.1
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

add_definitions(
   -g
   -std=c++2a
   -Wall
   -Werror
   -Wextra
   -pedantic
   -Wuninitialized
)

add_executable(
   EcuSw.out
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgAdc.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgBswM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgCanIf.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgCan.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgComM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgCom.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgCryIf.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgCry.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgCsm.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgDcm.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgDem.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgDet.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgDio.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgEa.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgEcuM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgEep.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgEthIf.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgEth.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgFee.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgFiM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgFls.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgFrIf.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgFr.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgGpt.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgIcu.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgLinIf.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgLinTp.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgLin.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgMcu.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgMemIf.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgNm.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgNvM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgOcu.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgOs.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgPduR.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgPort.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgPwm.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgSchM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgSecOC.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgSokFm.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgSpi.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgStbM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgVkms.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgWdgIf.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgWdgM.cpp
   BswAUTOSAR_Cfg_Gen/LATEST/PBcfgWdg.cpp
   BswAUTOSAR_EcuAb_CanIf/LATEST/CanIf.cpp
   BswAUTOSAR_EcuAb_CryIf/LATEST/CryIf.cpp
   BswAUTOSAR_EcuAb_Ea/LATEST/Ea.cpp
   BswAUTOSAR_EcuAb_EthIf/LATEST/EthIf.cpp
   BswAUTOSAR_EcuAb_Fee/LATEST/Fee.cpp
   BswAUTOSAR_EcuAb_FrIf/LATEST/FrIf.cpp
   BswAUTOSAR_EcuAb_LinIf/LATEST/LinIf.cpp
   BswAUTOSAR_EcuAb_LinTp/LATEST/LinTp.cpp
   BswAUTOSAR_EcuAb_MemIf/LATEST/MemIf.cpp
   BswAUTOSAR_EcuAb_WdgIf/LATEST/WdgIf.cpp
   BswAUTOSAR_McAL_Adc/LATEST/Adc.cpp
   BswAUTOSAR_McAL_Can/LATEST/Can.cpp
   BswAUTOSAR_McAL_Cry/LATEST/Cry.cpp
   BswAUTOSAR_McAL_Dio/LATEST/Dio.cpp
   BswAUTOSAR_McAL_Eep/LATEST/Eep.cpp
   BswAUTOSAR_McAL_Eth/LATEST/Eth.cpp
   BswAUTOSAR_McAL_Fls/LATEST/Fls.cpp
   BswAUTOSAR_McAL_Fr/LATEST/Fr.cpp
   BswAUTOSAR_McAL_Gpt/LATEST/Gpt.cpp
   BswAUTOSAR_McAL_Icu/LATEST/Icu.cpp
   BswAUTOSAR_McAL_Lin/LATEST/Lin.cpp
   BswAUTOSAR_McAL_Mcu/LATEST/Mcu.cpp
   BswAUTOSAR_McAL_Ocu/LATEST/Ocu.cpp
   BswAUTOSAR_McAL_Port/LATEST/Port.cpp
   BswAUTOSAR_McAL_Pwm/LATEST/Pwm.cpp
   BswAUTOSAR_McAL_Spi/LATEST/Spi.cpp
   BswAUTOSAR_McAL_Wdg/LATEST/Wdg.cpp
   BswAUTOSAR_Service_BswM/LATEST/BswM.cpp
   BswAUTOSAR_Service_Com/LATEST/Com.cpp
   BswAUTOSAR_Service_ComM/LATEST/ComM.cpp
   BswAUTOSAR_Service_Csm/LATEST/Csm.cpp
   BswAUTOSAR_Service_Dcm/LATEST/Dcm.cpp
   BswAUTOSAR_Service_Dem/LATEST/Dem.cpp
   BswAUTOSAR_Service_Det/LATEST/Det.cpp
   BswAUTOSAR_Service_EcuM/LATEST/EcuM.cpp
   BswAUTOSAR_Service_FiM/LATEST/FiM.cpp
   BswAUTOSAR_Service_Nm/LATEST/Nm.cpp
   BswAUTOSAR_Service_NvM/LATEST/NvM.cpp
   BswAUTOSAR_Service_Os/LATEST/Os.cpp
   BswAUTOSAR_Service_PduR/LATEST/PduR.cpp
   BswAUTOSAR_Service_SchM/LATEST/SchM.cpp
   BswAUTOSAR_Service_SecOC/LATEST/SecOC.cpp
   BswAUTOSAR_Service_SokFm/LATEST/SokFm.cpp
   BswAUTOSAR_Service_StartUp/LATEST/StartUp.cpp
   BswAUTOSAR_Service_StbM/LATEST/StbM.cpp
   BswAUTOSAR_Service_Vkms/LATEST/Vkms.cpp
   BswAUTOSAR_Service_WdgM/LATEST/WdgM.cpp
   Rte/LATEST/Rte.cpp
   SwcServiceEcuM/LATEST/SwcServiceEcuM.cpp
   SwcServiceOs/LATEST/SwcServiceOs.cpp
   SwcApplFoc/LATEST/SwcApplFoc.cpp
)

target_include_directories(
   EcuSw.out PUBLIC
   "${PROJECT_SOURCE_DIR}/common/LATEST"
   "${PROJECT_SOURCE_DIR}/Compiler_Abstraction_GNU/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Cfg_Gen/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_CanIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_CryIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_Ea/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_EthIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_Fee/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_FrIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_LinIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_LinTp/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_MemIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_EcuAb_WdgIf/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Adc/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Can/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Cry/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Dio/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Eep/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Eth/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Fls/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Fr/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Gpt/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Icu/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Lin/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Mcu/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Ocu/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Port/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Pwm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Spi/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_McAL_Wdg/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_BswM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Com/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_ComM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Csm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Dcm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Dem/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Det/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_EcuM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_FiM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Nm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_NvM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Os/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_PduR/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_SchM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_SecOC/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_SokFm/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_StartUp/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_StbM/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_Vkms/LATEST"
   "${PROJECT_SOURCE_DIR}/BswAUTOSAR_Service_WdgM/LATEST"
   "${PROJECT_SOURCE_DIR}/Rte/LATEST"
   "${PROJECT_SOURCE_DIR}/SwcServiceEcuM/LATEST"
   "${PROJECT_SOURCE_DIR}/SwcServiceOs/LATEST"
   "${PROJECT_SOURCE_DIR}/SwcApplFoc/LATEST"
)

